@@ -1,0 +1,35 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--Sample XML file generated by XMLSpy v2006 sp2 U
+	(http://www.altova.com)-->
+<partialTermination xmlns="http://www.fpml.org/2003/FpML-4-0"
+	xmlns:ns1="http://www.fpml.org/2004/FpML-4-1"
+	xmlns:dsig="http://www.w3.org/2000/09/xmldsig#"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://www.fpml.org/2003/FpML-4-0
+Z:\MYDOCU~1\PROJEC~1\CURRENT\2007-0~1\TESTIN~1.1\AsymmetricSample_final_
+2.xsd">
+	<partyOne id="ID000000">
+		<partyId partyIdScheme="normalizedString">String</partyId>
+		<partyName>String</partyName>
+	</partyOne>
+	<partyTwo id="ID000001">
+		<partyId partyIdScheme="normalizedString">String</partyId>
+		<partyName>String</partyName>
+	</partyTwo>
+	<partyThreeHref href="ID000002" />
+	<partialAmount>3.1415926535897932384626433832795</partialAmount>
+	<assignmentNotification>
+		<partyReference href="ID000001" />
+		<assignmentRole>Transferee</assignmentRole>
+		<priorNotification>true</priorNotification>
+		<contactName>String</contactName>
+	</assignmentNotification>
+	<underlyerAdjustment>
+		<eventEffectiveDate>2006-05-09</eventEffectiveDate>
+		<partyThree id="ID000002">
+			<partyId partyIdScheme="normalizedString">String</partyId>
+			<partyName>String</partyName>
+		</partyThree>
+		<unwindCashflow href="ID000001" />
+	</underlyerAdjustment>
+</partialTermination>
